# haul

./: README.md  main.py  package.json  pyproject.toml
docs/: README.md  architecture.md  code-review.md  cross-platform.md  eli5.md  how-mcp-works.md
skill/: SKILL.md
skill/references/: ds-tools.md  setup.md
src/: mcp_server.py
src/haul/: agent.py  browser.py  credentials.py  quality.py  query.py  reset.py  setup.py  setup_server.py  synology.py  synology_full.py
tests/: test_agent.py  test_credentials.py  test_quality.py  test_query.py  test_synology.py
